--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
     </div <div>
     <sup data-ns-test="block-inline-sup">Test1</sup>
     <sup data-ns-test="block-inline-sup">Test2</sup>
-    Answer: Inline
+    Answer: Block
     </div>
     <div>
         <sub data-ns-test="block-inline-sub">Test1</sub>
