--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
         <h1 data-ns-test="block-inline-h1">Test1</h1>
         <h1 data-ns-test="block-inline-h1">Test2</h1>
         Answer: Block
-    </div <div>
+	</div> <div>
     <sup data-ns-test="block-inline-sup">Test1</sup>
     <sup data-ns-test="block-inline-sup">Test2</sup>
     Answer: Inline
